@@ -3,6 +3,9 @@
  *
  * 3/10/13
  * 	- from similarity.c
+ * 25/10/13
+ * 	- oops, reverse rotation direction to match the convention used in the
+ * 	  rest of vips
  */
 
 /*
@@ -79,7 +82,7 @@ vips_similarity_build( VipsObject *object )
 		return( -1 );
 
 	a = similarity->scale * cos( VIPS_RAD( similarity->angle ) ); 
-	b = sin( VIPS_RAD( similarity->angle ) );
+	b = -sin( VIPS_RAD( similarity->angle ) );
 	c = -b;
 	d = a;
 
