@@ -1,5 +1,7 @@
 18/10/13	started 7.36.3
 - fix compiler warnings in ubuntu 13.10
+- reverse similarity rotation direction to match the convention used 
+  elsewhere in vips
 
 10/10/13	started 7.36.2
 - better jpeg startup
